<resources>
    <string name="app_name">ITime</string>
    <string name="app_label">ITime</string>
    <string name="action_settings">Settings</string>
    <string name="Meeting">Meeting</string>
    <string name="Calendar">Calendar</string>
    <string name="Mail">Mail</string>
    <string name="Setting">Setting</string>
    <string name="meeting_setting">Meeting Setting</string>
    <string name="meeting_friend">My iTIME Contacts</string>
    <string name="meeting_duration">Duration</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="Logout">Log Out</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="settings_meeting_preference">Meeting Preferences</string>
    <string name="settings_import_calendar">Import Calendars</string>
    <string name="settings_default_alert_time">Default Alert Time</string>
    <string name="settings_calendar_type">Calendar Type Setting</string>
    <string name="settings_clear_calendar">Clear Calendar</string>
    <string name="settings_language">Language Change Settings</string>
    <string name="add_friend">AAdd Friend</string>
    <string name="default_location">Melbourne</string>
    <string name="time_out">Sorry, time out.</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="upload_profile_photo_fail">Failed to upload user profile photo</string>
    <string name="upload_profile_photo_success">Upload user profile photo success</string>
    <string name="calendar_title">Calendar</string>
    <string name="meeting_title">Meeting</string>
    <string name="inbox_title">Inbox</string>
    <string name="setting_title">Setting</string>
    <string name="meeting_start_time">Starts</string>
    <string name="meeting_end_time">Ends</string>
    <string name="meeting_time_button">Time</string>
    <string name="meeting_date_button">Date</string>
    <string name="meeting_send_invitation_name">Name</string>
    <string name="meeting_send_invitation_venue">Venue</string>
    <string name="meeting_search_friend_title">Search Friend</string>
    <string name="meeting_searchbar">Search your friend</string>
    <string name="meeting_search_scan_qrcode">Scan QRCode</string>
    <string name="meeting_duraiton_dialog_title">Duration</string>
    <string name="meeting_add_dialog_title">Search</string>
    <string name="meeting_duration_textview">Duration</string>
    <string name="meeting_select_title">Meeting Time Select</string>
    <string name="meeting_dialog_search">Search iTIME friends</string>
    <string name="meeting_dialog_sms">Add Contacts by SMS</string>
    <string name="meeting_dialog_email">Add Contacts by Email</string>
    <string name="meeting_dialog_qrcode">Scan QR code</string>
    <string name="meeting_dialog_facebook">Add Facebook Friends</string>
    <string name="meeting_dialog_wechat">Add WeChat Friends</string>
    <string name="phone_contact_title">Search Contacts</string>
    <string name="phone_contact_addway_title">Add Method</string>
    <string name="new_meeting_namehit">Name</string>
    <string name="new_meeting_venuehit">Venue</string>
    <string name="new_meeting_repeat">Repeats</string>
    <string name="new_meeting_punctual">Punctual</string>
    <string name="new_meeting_alert">Alert -- At Time Of Event</string>
    <string name="alert_event">At Time Of Event</string>
    <string name="new_meeting_title">New Meeting</string>
    <string name="new_meeting_repeat_dialog_title">Repeats</string>
    <string name="new_meeting_alert_dialog_title">Alert Time</string>
    <string name="new_meeting_alert_button">Alert -- </string>
    <string name="new_meeting_send_invitation_successful">Meeting invitation has been sent successfully</string>
    <string name="new_meeting_confirm_title">Sending Invitation</string>
    <string name="new_meeting_confirm_content">Do you want to send the Meeting Invitation</string>
    <string name="new_meeting">New Meeting</string>
    <string name="new_event_title">New Event</string>
    <string name="repeat_default">One-time event</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_remember">If remember?</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_warning_username">Please input your username</string>
    <string name="login_warning_password">Please input your password</string>
    <string name="login_warning_exist">Sorry, this username has been used</string>
    <string name="login_warning_login_fail">Sorry, your username and password do not match</string>
    <string name="login_warning_username_illegal">Sorry, please use real email address as your username</string>
    <string name="login_warning_password_illegal">Sorry, the length of your password should be more than 5</string>
    <string name="meeting_detail_attendees">Attendees</string>
    <string name="meeting_detail_invite">Invitation from</string>
    <string name="meeting_detail_depture">Departure at</string>
    <string name="meeting_detail_starts">Starts</string>
    <string name="meeting_detail_ends">Ends</string>
    <string name="meeting_detail_repeats">Repeats</string>
    <string name="meeting_detail_Punctual">Punctual</string>
    <string name="meeting_detail_note">Note</string>
    <string name="meeting_detail_email">Send to Email</string>
    <string name="meeting_detail_accept">Accept</string>
    <string name="meeting_detail_Maybe">Maybe</string>
    <string name="meeting_detail_Decline">Decline</string>
    <string name="meeting_detail_quit">Quit Meeting</string>
    <string name="meeting_detail_reason">Reason</string>
    <string name="meeting_detail_reason_content">Why do you reject the meeting?</string>
    <string name="meeting_detail_title">Meeting Detail</string>
    <string name="meeting_attendees_title">Attendees</string>
    <string name="meeting_detail_new_name">New Meeting Name</string>
    <string name="meeting_detail_new_venue">New Venue</string>
    <string name="meeting_detail_new_start_time">New Start Time</string>
    <string name="meeting_detail_new_end_time">New End Time</string>
    <string name="meeting_detail_new_repeat">New Repeat Type</string>
    <string name="meeting_detail_new_Punctual">If Punctual</string>
    <string name="meeting_detail_new_note">New Note</string>
    <string name="meeting_update">Update Meeting Successful</string>
    <string name="meeting_detail_email_content">Hi, please check this meeting.</string>
    <string name="meeting_detail_quit_reason_title">Quit Reason</string>
    <string name="meeting_detail_quit_reason">Please Type the Reason</string>
    <string name="repeat_add_friend">Sorry, %1s is aready your friend</string>
    <string name="add_friend_myself">Sorry, You cannot add yourself</string>
    <string name="add_friend_login">Sorry, you need to login first.</string>
    <string name="check_login_timeout">Timeout, please check your internet</string>
    <string name="add_friend_confirm">Would you like to add %1s as your friend?</string>
    <string name="search_friend_added_friend_info">Please wait for your friend\'s reply</string>
    <string name="auto_titile">Search Venue</string>
    <string name="inline_preferences">inline_preference</string>
    <string name="summary_checkbox_preference">summary_checkbox_preference</string>
    <string name="title_checkbox_preference">title_checkbox_preference</string>
    <string name="dialog_based_preferences">dialog_based_preferences</string>
    <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="dialog_title_list_preference">dialog_title_list_preference</string>
    <string name="summary_list_preference">summary_list_preference</string>
    <string name="title_list_preference">title_list_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_child_preference">summary_child_preference</string>
    <string name="title_child_preference">title_child_preference</string>
    <string name="launch_preferences">launch_preference</string>
    <string name="title_screen_preference">title_screen_preference</string>
    <string name="summary_screen_preference">summary_screen_preference</string>
    <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
    <string name="summary_next_screen_toggle_preference">summary_next_screen_toggle_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="add_friend_facebook_install">You do not install Messenger yat, would you like to install?</string>
    <string name="facebook_app_id">450185851844736</string>
    <string name="google_app_id_me">AIzaSyDjDteQOjuWYV7ST_Wi7k34i36j2OngA88</string>
    <string name="google_web_id">AIzaSyBC4zDmkarugKY0Njs_n2TtEUVEyeESn0c</string>
    <string name="wechat_app_id">wx3f4cf39b8038b21a</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Daily</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="calendar_type_delete">Delete</string>
    <string name="new_calendar_type_title">New Calendar Type</string>
    <string name="edit_calendar_type_title">Edit Calendar Type</string>
    <string name="unread">Unread</string>
    <string name="all_message">All</string>
    <string name="inbox_mark_all_read">Mark all read</string>
    <string name="inbox_delete_all">Delete all</string>
    <string name="inbox_message_delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="show_detail">Show Detail</string>
    <string name="later">Later</string>
    <string name="departure_time">Departure at</string>
    <string name="alert_default">At time of Event</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="event_detail_alert">Alert</string>
    <string name="event_detail_edit">Edit</string>
    <string name="event_detail_delete">Delete</string>
    <string name="import_calendar">Import Calendar</string>
    <string name="import_google_calendar">Import Google Calendar</string>
    <string name="import_ios_calendar">Import  IOS Calendar</string>
    <string name="clear_calendars_success">Clear calendar success</string>
    <string name="clear_calendars_fail">Clear calendar failed</string>
    <string name="set_language">Set Language</string>
</resources>