<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:text="@string/meeting_detail_quit_reason_title"
        style="@style/DialogTitle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_detail_quit_reason"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meeting_detail_reason"
        android:layout_margin="10dp"
        android:id="@+id/meeting_detail_reason_note"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/Cancel"
            android:id="@+id/meeting_detail_reason_cancel"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/send"
            android:id="@+id/meeting_detail_reason_send"
            />
    </LinearLayout>


</LinearLayout>