<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="50dp"/>
    </LinearLayout>
    <com.itime.team.itime.views.widget.ClearEditText
        android:id="@+id/login_username"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:background="@drawable/login_edittext_bg"
        android:drawableLeft="@drawable/icon_user"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:singleLine="true"
        android:drawableRight="@drawable/delete_selector"
        android:hint="@string/login_username"
        android:layout_height="50dp" >

    </com.itime.team.itime.views.widget.ClearEditText>

    <com.itime.team.itime.views.widget.ClearEditText
        android:id="@+id/login_password"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:drawableLeft="@drawable/account_icon"
        android:hint="@string/login_password"
        android:singleLine="true"
        android:password="true"
        android:drawableRight="@drawable/delete_selector"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_username"
        android:background="@drawable/login_edittext_bg" >
    </com.itime.team.itime.views.widget.ClearEditText>

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/login_button_bg"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/password"
        android:layout_marginTop="25dp"
        android:text="@string/login_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_remember"
            android:id="@+id/login_remember"
            android:textOff="Off"
            android:textOn="On"
            android:checked="true"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginLeft="50dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_register"
            android:background="@color/transparent"
            android:text="@string/login_register"
            android:gravity="right"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>




</LinearLayout>