<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meeting_search"
        android:queryHint="@string/meeting_searchbar"/>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/meeting_invited_friend"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>
    <ScrollView
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meeting_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_setting"
                android:layout_marginBottom="13dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    style="@style/MeetingText"
                    android:text="@string/meeting_start_time"
                    />
                <Button
                    android:id="@+id/meeting_start_date"
                    style="@style/MeetingBtnDate"/>
                <Button
                    android:id="@+id/meeting_start_time"
                    style="@style/MeetingBtnTime"/>
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    style="@style/MeetingText"
                    android:text="@string/meeting_end_time"/>
                <Button
                    android:id="@+id/meeting_end_date"
                    style="@style/MeetingBtnDate"/>
                <Button
                    android:id="@+id/meeting_end_time"
                    style="@style/MeetingBtnTime"/>
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_duration"
                android:id="@+id/meeting_duration"
                android:background="@drawable/button_shadow"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_friend"
                android:layout_marginBottom="13dp"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/meeting_listview">
            </ListView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


