<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/new_meeting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/new_meeting_main_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_meeting_name"
                android:hint="@string/new_meeting_namehit"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_meeting_venuehit"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    style="@style/MeetingText"
                    android:text="@string/meeting_start_time"/>
                <Button
                    style="@style/MeetingBtnDate"
                    android:id="@+id/new_meeting_start_date"
                    />
                <Button
                    style="@style/MeetingBtnTime"
                    android:id="@+id/new_meeting_start_time"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    style="@style/MeetingText"
                    android:text="@string/meeting_end_time"/>
                <Button
                    style="@style/MeetingBtnDate"
                    android:id="@+id/new_meeting_end_date"
                    />
                <Button
                    style="@style/MeetingBtnTime"
                    android:id="@+id/new_meeting_end_time"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    style="@style/MeetingText"
                    android:text="@string/new_meeting_repeat" />
                <Button
                    style="@style/MeetingBtnDate"
                    android:text="One-time event"
                    android:id="@+id/new_meeting_repeat"
                    android:background="@drawable/button_shadow"/>
                <TextView
                    style="@style/MeetingText"
                    android:text="@string/new_meeting_punctual"
                    android:layout_weight="2"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_meeting_punctual"
                    android:layout_weight="1"/>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scrollbars="vertical"
                android:background="@color/white"
                android:layout_marginBottom="20dp"
                android:singleLine="false"
                android:id="@+id/new_meeting_message"
                android:gravity="top" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shadow"
                android:id="@+id/new_meeting_alert"
                android:text="@string/new_meeting_alert"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>